--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "git add . && cz && git push",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "init:Cli": "npm install -g commitizen && npm install -g conventional-changelog-cli"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "next": "12.0.8",
